# Vex-Haskell

./: .gitignore  CHANGELOG.md  LICENSE  README.md  Vex.cabal
.github/workflows/: ci.yml
app/: Lexer.hs  Main.hs
docs/: snippets.md
docs/vex/: getting-started.md  syntax.md  type-system.md
examples/: hello.vex  test.vex
src/: AST.hs  Color.hs  Compiler.hs  Error.hs  Help.hs  Lexer.hs  Parser.hs  Token.hs
src/Vex/CLI/: Cli.hs  Color.hs  Help.hs  Options.hs  Parser.hs
src/Vex/Compiler/: AST.hs  Compiler.hs  Lexer.hs  Parser.hs  Token.hs
src/Vex/Core/: AST.hs  Error.hs
test/: Spec.hs
