cabal-version:   3.0
name:            Vex
version:         0.1.0.0
synopsis:        A purely functional memory safe programming language
description:
  Vex is a modern, purely functional programming language designed with memory safety in mind...

license:         MIT
license-file:    LICENSE
author:          Codezz-ops
maintainer:      codezz-ops@protonmail.com
copyright:       Copyright (c) 2025 Codezz-ops
category:        Language
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/PeterGriffinSr/Vex

common warnings
  ghc-options:
    -Wall -Wcompat -Wimplicit-prelude -Wunsafe -Wmissing-export-lists
    -Wmissing-pattern-synonym-signatures -Wmissing-home-modules
    -Wmissing-local-signatures -Werror=missing-signatures
    -Werror=unused-imports -Werror=unused-matches
    -Werror=incomplete-patterns -Werror=incomplete-uni-patterns
    -Werror=incomplete-record-updates -Werror=missing-import-lists
    -Werror=deprecations -Werror=all-missed-specializations

library core
  exposed-modules:
    Vex.CLI.Color
    Vex.Core.Error

  hs-source-dirs:   src
  build-depends:
    , base        >=4.17 && <4.23
    , containers  >=0.6  && <0.7

  default-language: Haskell2010

library compiler
  exposed-modules:
    Vex.Compiler.AST
    Vex.Compiler.Compiler
    Vex.Compiler.Lexer
    Vex.Compiler.Parser
    Vex.Compiler.Token

  other-modules:
    Paths_Vex
    Vex.CLI.Color
    Vex.CLI.Help
    Vex.Core.Error

  autogen-modules:  Paths_Vex
  hs-source-dirs:   src
  build-depends:
    , base                >=4.17 && <4.23
    , containers          >=0.6  && <0.7
    , core                >=0.1  && <0.2
    , megaparsec          >=9.7  && <10
    , parser-combinators  >=1.3  && <2

  default-language: Haskell2010

library cli
  exposed-modules:
    Vex.CLI.Color
    Vex.CLI.Help

  autogen-modules:  Paths_Vex
  hs-source-dirs:   src
  build-depends:
    , base  >=4.17 && <4.23
    , core  >=0.1  && <0.2

  other-modules:    Paths_Vex
  default-language: Haskell2010

executable vex
  import:           warnings
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
    , base      >=4.17 && <4.23
    , cli       >=0.1  && <0.2
    , compiler  >=0.1  && <0.2
    , core      >=0.1  && <0.2

  default-language: Haskell2010

test-suite lexer-tests
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  build-depends:
    , base                >=4.17 && <4.23
    , compiler            >=0.1  && <0.2
    , core                >=0.1  && <0.2
    , hspec               >=2.11 && <3
    , megaparsec          >=9.7  && <10
    , parser-combinators  >=1.3  && <2

  default-language: Haskell2010
